# docker-test

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
templates/: base.html  create.html  index.html  post.html
