[tool.poetry]
name = "docker-test"
version = "0.1.0"
description = "My first docker project"
authors = ["Tomas <tomas.landberg@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "webapp", from = "." }
]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
